feat(roles) several changes done on the roles and tests

--- a/inventory/group_vars/pi.yaml
+++ b/inventory/group_vars/pi.yaml
@@ -5,8 +5,8 @@ ansible_user: mvaldes
 username: mvaldes
 username_home: "/home/{{ username }}"
 
-# Node architecture (amd64, arm64)
-node_arch: amd64
+# Node architecture
+node_arch: arm64
 
 # Service toggles
 pihole_enabled: false
