--- a/roles/node_setup/defaults/main.yml
+++ b/roles/node_setup/defaults/main.yml
@@ -1,3 +1,12 @@
 # SPDX-License-Identifier: MIT-0
 ---
 # defaults file for setup
+
+# Username for SSH access configuration
+username: mvaldes
+
+# Enable/disable pihole service management
+pihole_enabled: false
+
+# Enable/disable OTEL collector agent
+otel_enabled: false
