--- a/roles/node_setup/handlers/main.yml
+++ b/roles/node_setup/handlers/main.yml
@@ -6,3 +6,7 @@
 - name: Restart Systemd Daemon
   ansible.builtin.systemd:
     daemon_reload: true
+- name: Restart Otel Agent
+  ansible.builtin.systemd:
+    name: otel-agent
+    state: restarted
