--- a/roles/node_setup/molecule/default/verify.yml
+++ b/roles/node_setup/molecule/default/verify.yml
@@ -1,45 +1,394 @@
 - name: Verify
   hosts: all
-  gather_facts: false
+  gather_facts: true
+  vars:
+    otel_version: "0.139.0"
+    agent_endpoint: "otel.local.net"
+    agent_port: 80
+    username: "mvaldes"
   tasks:
-    - name: Check user exists
-      ansible.builtin.user:
-        name: "mvaldes"
-        state: present
-    - name: Check Core Packages
-      ansible.builtin.package:
-        name:
-          - neovim
-          - tmux
-          - bat
-          - git
-          - gh
-          - fzf
-        state: present
-    - name: Check Repos Cloned
-      ansible.builtin.stat:
-        path: "/home/mvaldes/git/{{ item }}"
-      register: repo_stat
-      loop:
-        - vorpal
-        - k8s-apps
-        - twitch-bot
-        - dotfiles
-    - name: Check files are linked
-      ansible.builtin.stat:
-        path: "/home/mvaldes/.config/{{ item }}"
-      register: config_stat
-      loop:
-        - nvim
-        - zsh
-        - tmux
-        - bat
-        - atuin
-    - name: Debug Repo Clone Status
-      ansible.builtin.debug:
-        msg: "File: {{ item.item }}, Is Link: {{ item.stat.islnk }}"
-      loop: repo_stat.results
-    - name: Debug Config Link Status
-      ansible.builtin.debug:
-        msg: "File: {{ item.item }}, Is Link: {{ item.stat.islnk }}"
-      loop: config_stat.results
+    # =========================================================================
+    # Structure Tests (structure.yml)
+    # =========================================================================
+    - name: Verify Structure
+      tags:
+        - structure
+      block:
+        - name: Get Architecture Mapping
+          ansible.builtin.set_fact:
+            expected_arch: "{{ arch_map[ansible_architecture] | default('amd64') }}"
+          vars:
+            arch_map:
+              x86_64: amd64
+              aarch64: arm64
+              armv7l: arm
+
+        - name: Assert Architecture Is Detected
+          ansible.builtin.assert:
+            that:
+              - ansible_architecture is defined
+              - expected_arch in ['amd64', 'arm64', 'arm']
+            fail_msg: "Architecture detection failed"
+            success_msg: "Architecture detected: {{ ansible_architecture }} -> {{ expected_arch }}"
+
+    # =========================================================================
+    # SSH Access Tests (access.yml)
+    # =========================================================================
+    - name: Verify SSH Access
+      tags:
+        - ssh
+        - access
+      block:
+        - name: Check SSH Package Installed
+          ansible.builtin.package:
+            name: openssh-server
+            state: present
+          check_mode: true
+          register: ssh_package
+
+        - name: Assert SSH Package Installed
+          ansible.builtin.assert:
+            that:
+              - ssh_package is not changed
+            fail_msg: "openssh-server package is not installed"
+            success_msg: "openssh-server package is installed"
+
+        - name: Check SSHD Config Exists
+          ansible.builtin.stat:
+            path: /etc/ssh/sshd_config
+          register: sshd_config
+
+        - name: Assert SSHD Config Exists
+          ansible.builtin.assert:
+            that:
+              - sshd_config.stat.exists
+              - sshd_config.stat.mode == "0644"
+            fail_msg: "SSHD config file does not exist or has wrong permissions"
+            success_msg: "SSHD config exists with correct permissions"
+
+        - name: Read SSHD Config Content
+          ansible.builtin.slurp:
+            src: /etc/ssh/sshd_config
+          register: sshd_config_content
+
+        - name: Assert SSHD Config Contains Security Settings
+          ansible.builtin.assert:
+            that:
+              - "'PermitRootLogin no' in sshd_config_content.content | b64decode"
+              - "'PasswordAuthentication no' in sshd_config_content.content | b64decode"
+              - "'PubkeyAuthentication yes' in sshd_config_content.content | b64decode"
+              - "'PermitEmptyPasswords no' in sshd_config_content.content | b64decode"
+              - "'X11Forwarding no' in sshd_config_content.content | b64decode"
+            fail_msg: "SSHD config missing required security settings"
+            success_msg: "SSHD config contains all required security settings"
+
+        - name: Check Sudoers File Exists
+          ansible.builtin.stat:
+            path: /etc/sudoers.d/sudoers-nopasswd
+          register: sudoers_file
+
+        - name: Assert Sudoers File Exists
+          ansible.builtin.assert:
+            that:
+              - sudoers_file.stat.exists
+            fail_msg: "Sudoers file does not exist"
+            success_msg: "Sudoers file exists"
+
+        - name: Read Sudoers File Content
+          ansible.builtin.slurp:
+            src: /etc/sudoers.d/sudoers-nopasswd
+          register: sudoers_content
+
+        - name: Assert Sudoers Contains Expected Commands
+          ansible.builtin.assert:
+            that:
+              - "'/usr/bin/systemctl restart ssh' in sudoers_content.content | b64decode"
+              - "'/usr/bin/apt update' in sudoers_content.content | b64decode"
+              - "'/usr/bin/apt upgrade' in sudoers_content.content | b64decode"
+              - "'NOPASSWD' in sudoers_content.content | b64decode"
+            fail_msg: "Sudoers file missing expected commands"
+            success_msg: "Sudoers file contains all expected commands"
+
+        - name: Check SSH Service Is Running
+          ansible.builtin.systemd:
+            name: ssh
+          register: ssh_service
+
+        - name: Assert SSH Service Is Running
+          ansible.builtin.assert:
+            that:
+              - ssh_service.status.ActiveState == "active"
+            fail_msg: "SSH service is not running"
+            success_msg: "SSH service is running"
+
+    # =========================================================================
+    # OTEL Agent Tests (otel.yml)
+    # =========================================================================
+    - name: Verify OTEL Agent
+      tags:
+        - otel
+      block:
+        - name: Check Otel User Exists
+          ansible.builtin.getent:
+            database: passwd
+            key: otel
+          register: otel_user
+
+        - name: Assert Otel User Created
+          ansible.builtin.assert:
+            that:
+              - otel_user is success
+            fail_msg: "Otel user was not created"
+            success_msg: "Otel user exists"
+
+        - name: Get Otel User Details
+          ansible.builtin.shell: |
+            getent passwd otel | cut -d: -f7
+          register: otel_shell
+          changed_when: false
+
+        - name: Assert Otel User Is System User
+          ansible.builtin.assert:
+            that:
+              - "otel_shell.stdout in ['/usr/sbin/nologin', '/bin/false', '/sbin/nologin']"
+            fail_msg: "Otel user should be a system user with no login shell"
+            success_msg: "Otel user is properly configured as system user"
+
+        - name: Check Otel Agent Binary Exists
+          ansible.builtin.stat:
+            path: /usr/local/bin/otelcol-contrib
+          register: otel_binary
+
+        - name: Assert Otel Agent Binary Exists And Is Executable
+          ansible.builtin.assert:
+            that:
+              - otel_binary.stat.exists
+              - otel_binary.stat.executable
+              - otel_binary.stat.mode == "0755"
+            fail_msg: "Otel agent binary does not exist or has wrong permissions"
+            success_msg: "Otel agent binary exists and is executable"
+
+        - name: Check Otel Agent Version
+          ansible.builtin.command: /usr/local/bin/otelcol-contrib --version
+          register: otel_version_output
+          changed_when: false
+
+        - name: Assert Otel Agent Version
+          ansible.builtin.assert:
+            that:
+              - "otel_version in otel_version_output.stdout"
+            fail_msg: "Otel agent version mismatch. Expected {{ otel_version }}"
+            success_msg: "Otel agent version {{ otel_version }} is installed"
+
+        - name: Check Otel Config Directory Exists
+          ansible.builtin.stat:
+            path: /opt/otel-agent
+          register: otel_config_dir
+
+        - name: Assert Otel Config Directory Exists With Correct Ownership
+          ansible.builtin.assert:
+            that:
+              - otel_config_dir.stat.exists
+              - otel_config_dir.stat.isdir
+              - otel_config_dir.stat.mode == "0755"
+              - otel_config_dir.stat.pw_name == "otel"
+              - otel_config_dir.stat.gr_name == "otel"
+            fail_msg: "Otel config directory does not exist or has wrong ownership"
+            success_msg: "Otel config directory exists with correct ownership"
+
+        - name: Check Otel Config File Exists
+          ansible.builtin.stat:
+            path: /opt/otel-agent/otel-config.yaml
+          register: otel_config_file
+
+        - name: Assert Otel Config File Exists With Correct Ownership
+          ansible.builtin.assert:
+            that:
+              - otel_config_file.stat.exists
+              - otel_config_file.stat.mode == "0644"
+              - otel_config_file.stat.pw_name == "otel"
+              - otel_config_file.stat.gr_name == "otel"
+            fail_msg: "Otel config file does not exist or has wrong ownership"
+            success_msg: "Otel config file exists with correct ownership"
+
+        - name: Read Otel Config Content
+          ansible.builtin.slurp:
+            src: /opt/otel-agent/otel-config.yaml
+          register: otel_config_content
+
+        - name: Assert Otel Config Contains Expected Settings
+          ansible.builtin.assert:
+            that:
+              - "'hostmetrics' in otel_config_content.content | b64decode"
+              - "'filelog' in otel_config_content.content | b64decode"
+              - "'otlphttp' in otel_config_content.content | b64decode"
+              - "agent_endpoint in otel_config_content.content | b64decode"
+              - "agent_port | string in otel_config_content.content | b64decode"
+            fail_msg: "Otel config missing expected settings"
+            success_msg: "Otel config contains all expected settings"
+
+        - name: Check Otel Systemd Service File Exists
+          ansible.builtin.stat:
+            path: /etc/systemd/system/otel-agent.service
+          register: otel_service_file
+
+        - name: Assert Otel Systemd Service File Exists
+          ansible.builtin.assert:
+            that:
+              - otel_service_file.stat.exists
+              - otel_service_file.stat.mode == "0644"
+            fail_msg: "Otel systemd service file does not exist"
+            success_msg: "Otel systemd service file exists"
+
+        - name: Read Otel Service File Content
+          ansible.builtin.slurp:
+            src: /etc/systemd/system/otel-agent.service
+          register: otel_service_content
+
+        - name: Assert Otel Service File Contains Expected Settings
+          ansible.builtin.assert:
+            that:
+              - "'User=otel' in otel_service_content.content | b64decode"
+              - "'Group=root' in otel_service_content.content | b64decode"
+              - "'Restart=always' in otel_service_content.content | b64decode"
+              - "'/usr/local/bin/otelcol-contrib' in otel_service_content.content | b64decode"
+              - "'/opt/otel-agent/otel-config.yaml' in otel_service_content.content | b64decode"
+            fail_msg: "Otel service file missing expected settings"
+            success_msg: "Otel service file contains all expected settings"
+
+        - name: Check Otel Service Is Enabled And Running
+          ansible.builtin.systemd:
+            name: otel-agent
+          register: otel_service_status
+
+        - name: Assert Otel Service Is Enabled
+          ansible.builtin.assert:
+            that:
+              - otel_service_status.status.UnitFileState == "enabled"
+            fail_msg: "Otel service is not enabled"
+            success_msg: "Otel service is enabled"
+
+        - name: Assert Otel Service Is Running
+          ansible.builtin.assert:
+            that:
+              - otel_service_status.status.ActiveState == "active"
+            fail_msg: "Otel service is not running"
+            success_msg: "Otel service is running"
+
+    # =========================================================================
+    # MOTD Tests (motd.yml)
+    # =========================================================================
+    - name: Verify MOTD
+      tags:
+        - motd
+      block:
+        - name: Check Custom MOTD Script Exists
+          ansible.builtin.stat:
+            path: /etc/update-motd.d/00-homelab
+          register: motd_script
+
+        - name: Assert Custom MOTD Script Exists And Is Executable
+          ansible.builtin.assert:
+            that:
+              - motd_script.stat.exists
+              - motd_script.stat.executable
+              - motd_script.stat.mode == "0755"
+              - motd_script.stat.pw_name == "root"
+              - motd_script.stat.gr_name == "root"
+            fail_msg: "Custom MOTD script does not exist or has wrong permissions"
+            success_msg: "Custom MOTD script exists with correct permissions"
+
+        - name: Read MOTD Script Content
+          ansible.builtin.slurp:
+            src: /etc/update-motd.d/00-homelab
+          register: motd_content
+
+        - name: Assert MOTD Script Contains Expected Content
+          ansible.builtin.assert:
+            that:
+              - "'#!/bin/bash' in motd_content.content | b64decode"
+              - "'Dynamic MOTD script' in motd_content.content | b64decode"
+              - "'System Information' in motd_content.content | b64decode"
+              - "'Disk Usage' in motd_content.content | b64decode"
+              - "'Memory Usage' in motd_content.content | b64decode"
+            fail_msg: "MOTD script missing expected content"
+            success_msg: "MOTD script contains all expected content"
+
+        - name: Execute MOTD Script
+          ansible.builtin.command: /etc/update-motd.d/00-homelab
+          register: motd_output
+          changed_when: false
+
+        - name: Assert MOTD Script Executes Successfully
+          ansible.builtin.assert:
+            that:
+              - motd_output.rc == 0
+              - "'System Information' in motd_output.stdout"
+            fail_msg: "MOTD script failed to execute"
+            success_msg: "MOTD script executes successfully"
+
+        - name: Check Default MOTD Components Are Disabled
+          ansible.builtin.stat:
+            path: "/etc/update-motd.d/{{ item }}"
+          loop:
+            - 10-help-text
+            - 50-motd-news
+          register: disabled_motd_components
+
+        - name: Assert Default MOTD Components Are Not Executable
+          ansible.builtin.assert:
+            that:
+              - not item.stat.executable or not item.stat.exists
+            fail_msg: "Default MOTD component {{ item.item }} should not be executable"
+            success_msg: "Default MOTD component {{ item.item }} is properly disabled"
+          loop: "{{ disabled_motd_components.results }}"
+          when: item.stat.exists
+
+        - name: Check PAM MOTD Configuration
+          ansible.builtin.slurp:
+            src: /etc/pam.d/sshd
+          register: pam_sshd_content
+
+        - name: Assert PAM MOTD Is Configured
+          ansible.builtin.assert:
+            that:
+              - "'pam_motd.so' in pam_sshd_content.content | b64decode"
+            fail_msg: "PAM MOTD is not configured in sshd"
+            success_msg: "PAM MOTD is properly configured"
+
+        - name: Check PrintMotd Setting In SSHD
+          ansible.builtin.slurp:
+            src: /etc/ssh/sshd_config
+          register: sshd_motd_config
+
+        - name: Assert PrintMotd Is Set
+          ansible.builtin.assert:
+            that:
+              - "'PrintMotd' in sshd_motd_config.content | b64decode"
+            fail_msg: "PrintMotd not configured in sshd_config"
+            success_msg: "PrintMotd is configured in sshd_config"
+
+    # =========================================================================
+    # Idempotency Test
+    # =========================================================================
+    - name: Verify Idempotency Indicators
+      tags:
+        - idempotency
+      block:
+        - name: Verify All Config Files Have Proper Timestamps
+          ansible.builtin.stat:
+            path: "{{ item }}"
+          loop:
+            - /etc/ssh/sshd_config
+            - /opt/otel-agent/otel-config.yaml
+            - /etc/systemd/system/otel-agent.service
+            - /etc/update-motd.d/00-homelab
+          register: config_files_stat
+
+        - name: Assert All Config Files Exist
+          ansible.builtin.assert:
+            that:
+              - item.stat.exists
+            fail_msg: "Config file {{ item.item }} does not exist"
+            success_msg: "Config file {{ item.item }} exists"
+          loop: "{{ config_files_stat.results }}"
