--- a/inventory/homelab.ini
+++ b/inventory/homelab.ini
@@ -1,8 +1,11 @@
+[local]
+localhost ansible_connection=local
+
 [homelab_nodes]
-eva02 ansible_host=192.168.1.2 ansible_user=mvaldes
-eva01 ansible_host=192.168.1.22 ansible_user=mvaldes
-eva03 ansible_host=192.168.1.23 ansible_user=mvaldes
-eva04 ansible_host=192.168.1.193 ansible_user=mvaldes
+eva01 ansible_host=192.168.1.22
+eva02 ansible_host=192.168.1.2
+eva03 ansible_host=192.168.1.23
+eva04 ansible_host=192.168.1.193
 
 [pi]
-pi ansible_host=192.168.1.13 ansible_user=mvaldes
+pi ansible_host=192.168.1.13
