fix(playbook) removing the git commit part it wont work in nix

--- a/playbooks/dotfiles.yaml
+++ b/playbooks/dotfiles.yaml
@@ -1,6 +1,6 @@
---- # Main playbook
+# Main playbook
 - name: Base Setup for new system
   hosts: local
   gather_facts: true
   roles:
-    - base
+    - role: dotfiles_setup
